--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html>
 <head>
     <meta charset="UTF-8">
     <title>Guess the Number</title>
@@ -7,9 +7,11 @@
 <body>
     <h1>Guess the Number Game</h1>
     <p>Guess a number between 1 and 10:</p>
-    <form action="/playagame" method="post">
-        <input type="number" name="guess" required>
+    <form id="form" class="form" action="/playagame" method="post">
+        <input type="number" id="number" name="guess" required>
         <input type="submit" value="Submit Guess">
     </form>
+
+    <script src="/js/form1.js"></script>
 </body>
 </html>
